[package]
name = "zephyr-data-provider"
authors = ["gkrason"]
description = "Data provider for https://cat.zephyrapp.nz"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4.41"
encoding_rs = "0.8.35"
html-escape = "0.2.13"
log = "0.4.27"
md5 = "0.7.0"
querystring = "1.1.0"
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
spin-sdk = "3.1.0"

[workspace]
